[project]
name = "gmaps-scraper"
version = "0.2.1"
description = "Interactive Google Maps scraper with Tkinter confirmation"
readme = "README.md"
authors = [{name = "Kanad Rishiraj (RoamingSaint)", email = "roamingsaint27@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = [
  "pycountry",
  "colorfulPyPrint",
  "selenium-web-automation-utils",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

