[project]
name = "gmaps-scraper"
version = "0.4.2"
description = "Interactive Google Maps scraper with Tkinter confirmation"
readme = "README.md"
authors = [{name = "Kanad Rishiraj (RoamingSaint)", email = "roamingsaint27@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = [
  "pycountry",
  "colorfulPyPrint",
  "reverse_geocoder",
  "selenium-web-automation-utils",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

